# Fedex_Rates_RAG

./: .gitignore  __GENERATE__CODE.txt  main.py  pyproject.toml
cursor_generated/: README.md  main.py  pyproject.toml  pytest.ini  requirements.txt  run_streamlit.py  start_aura.py
cursor_generated/config/: env_template.txt  settings.py
cursor_generated/data_sources/: README.md  fedex_pricing.csv
cursor_generated/scripts/checks/: README.md  check_all_tables.py  check_data.py  check_fuel_data.py
cursor_generated/scripts/misc/: README.md  check_vanna_training.py  clear_caches.py  debug_ingestion.py  fedex_zone_distance_mapping_inserts.sql  populate_all_data.py  populate_weather_only.py  table_descriptions_inserts.sql
cursor_generated/src/agents/: __init__.py  auxiliary_intelligence.py  base.py  structured_data.py  supervisor.py  synthesis_visualization.py  vector_search.py
cursor_generated/src/core/: database.py  state.py  workflow.py
cursor_generated/src/ui/: streamlit_app.py
cursor_generated/src/utils/: __init__.py  data_ingestion.py  fuel_data_fetcher.py  get_distance_between_cities.py  traffic_data_fetcher.py  visualizations.py  weather_data_fetcher.py
cursor_generated/tests/: __init__.py  conftest.py
cursor_generated/tests/test_agents/: __init__.py  test_base.py
cursor_generated/tests/test_core/: __init__.py  test_database.py  test_state.py
cursor_generated/tests/test_integration/: __init__.py  test_workflow.py
