[project]
name = "aura-shipping-platform"
version = "1.0.0"
description = "A sophisticated multi-agent shipping intelligence platform providing deep, contextualized insights into shipping logistics"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Aura Shipping Intelligence", email = "info@aura-shipping.com"}
]
keywords = ["shipping", "logistics", "ai", "multi-agent", "intelligence", "analytics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core Framework
    "langgraph>=0.2.0",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-core>=0.2.0",
    # Database & Vector Store
    "psycopg2-binary>=2.9.0",
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "qdrant-client>=1.7.0",
    # AI/ML
    "ollama>=0.2.0",
    "vanna[openai,qdrant]>=0.7.9",
    "sentence-transformers>=2.5.0",
    "transformers>=4.40.0",
    "torch>=2.0.0",
    # Web Framework & UI
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "streamlit>=1.32.0",
    "streamlit-plotly-events>=0.0.6",
    # Visualization
    "plotly>=5.18.0",
    "pydeck>=0.8.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    # API Clients & Data Processing
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "tenacity>=8.2.0",
    "cachetools>=5.3.0",
    "redis>=5.0.0",
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "python-multipart>=0.0.20",
    "aiofiles>=24.1.0",
    "black>=25.1.0",
    "isort>=6.0.1",
    "flake8>=7.3.0",
    "mypy>=1.16.1",
    "langchain-ollama>=0.3.3",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[project.urls]
Homepage = "https://github.com/aura-shipping/aura-platform"
Repository = "https://github.com/aura-shipping/aura-platform"
Documentation = "https://aura-shipping.github.io/aura-platform"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "src/**/*.py",
    "src/**/*.json",
    "src/**/*.yaml",
    "src/**/*.yml",
    "README.md",
    "LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=html --cov-report=term-missing"
